[package]
authors = ["idoasher@gmail.com"]
edition = "2018"
readme = "README.md"
name = "mini_rust_task"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.2"
#cortex-m-rt = "0.6.12"
#cortex-m-semihosting = "0.3.5"
cty = "0.2.1"


[lib]
name = "mini_rust_task"
crate-type = ["staticlib"]

[profile.release]
codegen-units = 1 # num. of translation units in parallel. less = slower better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
